--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
         "@babel/plugin-proposal-private-methods": "^7.18.6",
         "@babel/preset-env": "^7.24.5",
         "@babel/runtime": "^7.24.5",
+        "@graphql-codegen/cli": "^5.0.2",
+        "@graphql-codegen/client-preset": "^4.2.5",
+        "@graphql-codegen/typescript": "^4.0.6",
+        "@graphql-codegen/typescript-resolvers": "^4.0.6",
         "@jest/globals": "^29.4.3",
         "@metacraft/eslint-config": "^0.1.3",
         "@metacraft/tsconfig": "^0.0.2",
