--- a/package.json
+++ b/package.json
@@ -1,55 +1,37 @@
 {
-    "workspaces": [
-        "apps/*",
-        "packages/*"
-    ],
+    "name": "dailybux",
+    "version": "0.0.1",
+    "private": true,
     "scripts": {
-        "dev": "turbo run dev",
-        "test": "turbo run test",
-        "lint": "turbo run lint",
-        "lint:fix": "turbo run lint:fix",
-        "reset": "find . -type dir -name node_modules | xargs rm -rf && rm -rf yarn.lock"
+        "android": "react-native run-android",
+        "ios": "react-native run-ios",
+        "lint": "eslint .",
+        "start": "react-native start",
+        "codegen": "graphql-codegen --config vendor/codegen.ts",
+        "test": "jest"
+    },
+    "dependencies": {
+        "react": "18.2.0",
+        "react-native": "0.74.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.24.5",
-        "@babel/plugin-proposal-private-methods": "^7.18.6",
-        "@babel/preset-env": "^7.24.5",
-        "@babel/runtime": "^7.24.5",
-        "@graphql-codegen/cli": "^5.0.2",
-        "@graphql-codegen/client-preset": "^4.2.5",
-        "@graphql-codegen/typescript": "^4.0.6",
-        "@graphql-codegen/typescript-resolvers": "^4.0.6",
-        "@jest/globals": "^29.4.3",
-        "@metacraft/eslint-config": "^0.1.3",
-        "@metacraft/tsconfig": "^0.0.2",
-        "@react-native-clipboard/clipboard": "^1.13.0",
-        "@types/lodash": "^4.14.191",
-        "@types/node": "^17.0.12",
-        "@types/numeral": "^2.0.2",
-        "@types/pouchdb-mapreduce": "^6.1.7",
-        "@types/pouchdb-replication": "^6.4.4",
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.7",
-        "@types/react-native": "^0.71.2",
-        "@typescript-eslint/eslint-plugin": "^6.7.4",
-        "@typescript-eslint/parser": "^6.7.4",
-        "copy-webpack-plugin": "^11.0.0",
-        "cross-env": "^7.0.3",
-        "dotenv": "^16.3.1",
-        "jest": "^29.4.3",
-        "metro-react-native-babel-preset": "0.73.9",
-        "react-native": "^0.71.14",
-        "react-native-buffer": "^6.0.3",
-        "react-native-gesture-handler": "^2.13.4",
-        "react-native-reanimated": "^3.6.1",
-        "rimraf": "^5.0.0",
-        "tsconfig-paths-webpack-plugin": "^4.0.1",
-        "turbo": "latest",
-        "typescript": "^5.2.2",
-        "webpack": "^5.89.0"
+        "@babel/core": "^7.20.0",
+        "@babel/preset-env": "^7.20.0",
+        "@babel/runtime": "^7.20.0",
+        "@react-native/babel-preset": "0.74.83",
+        "@react-native/eslint-config": "0.74.83",
+        "@react-native/metro-config": "0.74.83",
+        "@react-native/typescript-config": "0.74.83",
+        "@types/react": "^18.2.6",
+        "@types/react-test-renderer": "^18.0.0",
+        "babel-jest": "^29.6.3",
+        "eslint": "^8.19.0",
+        "jest": "^29.6.3",
+        "prettier": "2.8.8",
+        "react-test-renderer": "18.2.0",
+        "typescript": "5.0.4"
     },
     "engines": {
-        "node": ">=20.0.0"
-    },
-    "packageManager": "yarn@4.2.1"
+        "node": ">=18"
+    }
 }
