--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "@babel/core": "^7.20.0",
         "@babel/preset-env": "^7.20.0",
         "@babel/runtime": "^7.20.0",
+        "@metacraft/eslint-config": "^0.1.3",
+        "@metacraft/tsconfig": "^0.0.2",
         "@react-native/babel-preset": "0.74.83",
         "@react-native/eslint-config": "0.74.83",
         "@react-native/metro-config": "0.74.83",
