--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,34 @@
 {
-  "extends": "@metacraft/tsconfig/application.json"
+    "extends": "@metacraft/tsconfig/application.json",
+    "include": [
+        "src",
+        "index*.js",
+        "globals.d.ts"
+    ],
+    "exclude": [
+        "node_modules"
+    ],
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "assets/*": [
+                "./assets/*"
+            ],
+            "components/*": [
+                "./src/components/*"
+            ],
+            "utils/*": [
+                "./src/utils/*"
+            ],
+            "state/*": [
+                "./src/state/*"
+            ],
+            "stacks/*": [
+                "./src/stacks/*"
+            ],
+            "screens/*": [
+                "./src/screens/*"
+            ]
+        }
+    }
 }
