--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     },
     "dependencies": {
         "react": "18.2.0",
-        "react-native": "0.74.1"
+        "react-native": "0.74.1",
+        "valtio": "^1.13.2"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
