--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "react": "18.2.0",
         "react-native": "0.74.1",
+        "react-native-reanimated": "^3.11.0",
         "valtio": "^1.13.2"
     },
     "devDependencies": {
