--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "dependencies": {
         "react": "18.2.0",
         "react-native": "0.74.1",
+        "react-native-device-info": "^10.13.2",
+        "react-native-fs": "^2.20.0",
+        "react-native-haptic-feedback": "^2.2.0",
         "react-native-reanimated": "^3.11.0",
+        "react-native-safe-area-context": "^4.10.1",
+        "react-native-screens": "^3.31.1",
+        "react-native-svg": "^15.2.0",
+        "react-native-vision-camera": "^4.0.3",
         "valtio": "^1.13.2"
     },
     "devDependencies": {
