--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
         "test": "jest"
     },
     "dependencies": {
+        "@react-navigation/native": "^6.1.17",
+        "@react-navigation/stack": "^6.3.29",
         "react": "18.2.0",
         "react-native": "0.74.1",
         "react-native-device-info": "^10.13.2",
         "react-native-fs": "^2.20.0",
+        "react-native-gesture-handler": "^2.16.2",
         "react-native-haptic-feedback": "^2.2.0",
         "react-native-reanimated": "^3.11.0",
         "react-native-safe-area-context": "^4.10.1",
