--- a/ios/dailybux/Info.plist
+++ b/ios/dailybux/Info.plist
@@ -48,5 +48,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Gabarito-Black.ttf</string>
+		<string>Gabarito-Bold.ttf</string>
+		<string>Gabarito-ExtraBold.ttf</string>
+		<string>Gabarito-Medium.ttf</string>
+		<string>Gabarito-Regular.ttf</string>
+		<string>Gabarito-SemiBold.ttf</string>
+	</array>
 </dict>
 </plist>
