--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
         "test": "jest"
     },
     "dependencies": {
+        "@react-native-firebase/app": "^19.2.2",
+        "@react-native-firebase/auth": "^19.2.2",
+        "@react-native-google-signin/google-signin": "^11.0.1",
         "@react-navigation/native": "^6.1.17",
         "@react-navigation/stack": "^6.3.29",
         "react": "18.2.0",
         "react-native": "0.74.1",
+        "react-native-config": "^1.5.1",
         "react-native-device-info": "^10.13.2",
         "react-native-fs": "^2.20.0",
         "react-native-gesture-handler": "^2.16.2",
