--- a/ios/dailybux/Info.plist
+++ b/ios/dailybux/Info.plist
@@ -20,13 +20,35 @@
 	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>fireauth</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>$(REVERSED_CLIENT_ID)</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>aigo</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>aigo</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
@@ -34,6 +56,15 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Gabarito-Black.ttf</string>
+		<string>Gabarito-Bold.ttf</string>
+		<string>Gabarito-ExtraBold.ttf</string>
+		<string>Gabarito-Medium.ttf</string>
+		<string>Gabarito-Regular.ttf</string>
+		<string>Gabarito-SemiBold.ttf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,14 +79,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Gabarito-Black.ttf</string>
-		<string>Gabarito-Bold.ttf</string>
-		<string>Gabarito-ExtraBold.ttf</string>
-		<string>Gabarito-Medium.ttf</string>
-		<string>Gabarito-Regular.ttf</string>
-		<string>Gabarito-SemiBold.ttf</string>
-	</array>
 </dict>
 </plist>
