--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "test": "jest"
     },
     "dependencies": {
+        "@invertase/react-native-apple-authentication": "^2.3.0",
         "@react-native-firebase/app": "^19.2.2",
         "@react-native-firebase/auth": "^19.2.2",
         "@react-native-google-signin/google-signin": "^11.0.1",
