--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
         "@metacraft/eslint-config": "^0.1.3",
         "@metacraft/tsconfig": "^0.0.2",
         "@react-native/babel-preset": "0.74.83",
-        "@react-native/eslint-config": "0.74.83",
         "@react-native/metro-config": "0.74.83",
         "@react-native/typescript-config": "0.74.83",
         "@types/react": "^18.2.6",
@@ -47,11 +46,11 @@
         "babel-plugin-module-resolver": "^5.0.2",
         "eslint": "^8.19.0",
         "jest": "^29.6.3",
-        "prettier": "2.8.8",
         "react-test-renderer": "18.2.0",
-        "typescript": "5.0.4"
+        "typescript": "5.4.5"
     },
     "engines": {
         "node": ">=18"
-    }
+    },
+    "packageManager": "yarn@4.2.2"
 }
