--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "start": "react-native start",
-        "codegen": "graphql-codegen --config vendor/codegen.ts",
+        "codegen": "graphql-codegen --config tools/codegen.ts",
         "test": "jest"
     },
     "dependencies": {
@@ -18,6 +18,7 @@
         "@react-native-google-signin/google-signin": "^11.0.1",
         "@react-navigation/native": "^6.1.17",
         "@react-navigation/stack": "^6.3.29",
+        "graphql": "^16.8.1",
         "react": "18.2.0",
         "react-native": "0.74.1",
         "react-native-config": "^1.5.1",
@@ -36,6 +37,8 @@
         "@babel/core": "^7.20.0",
         "@babel/preset-env": "^7.20.0",
         "@babel/runtime": "^7.20.0",
+        "@graphql-codegen/cli": "5.0.2",
+        "@graphql-codegen/typescript-resolvers": "^4.0.6",
         "@metacraft/eslint-config": "^0.1.3",
         "@metacraft/tsconfig": "^0.0.2",
         "@react-native/babel-preset": "0.74.83",
