--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "globals.d.ts"
     ],
     "exclude": [
-        "node_modules"
+        "node_modules", "src/graphql/types.ts"
     ],
     "compilerOptions": {
         "baseUrl": ".",
