--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@react-navigation/native": "^6.1.17",
         "@react-navigation/stack": "^6.3.29",
         "graphql": "^16.8.1",
+        "graphql-request": "^7.0.1",
         "react": "18.2.0",
         "react-native": "0.74.1",
         "react-native-config": "^1.5.1",
@@ -38,6 +39,7 @@
         "@babel/preset-env": "^7.20.0",
         "@babel/runtime": "^7.20.0",
         "@graphql-codegen/cli": "5.0.2",
+        "@graphql-codegen/typescript-graphql-request": "^6.2.0",
         "@graphql-codegen/typescript-resolvers": "^4.0.6",
         "@metacraft/eslint-config": "^0.1.3",
         "@metacraft/tsconfig": "^0.0.2",
