--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     ],
     "compilerOptions": {
         "baseUrl": ".",
+        "moduleResolution": "Bundler",
         "paths": {
             "assets/*": [
                 "./assets/*"
