--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,9 @@
             ],
             "screens/*": [
                 "./src/screens/*"
+            ],
+            "api/*": [
+                "./src/api/*"
             ]
         }
     }
