--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-native-safe-area-context": "^4.10.1",
         "react-native-screens": "^3.31.1",
         "react-native-svg": "^15.2.0",
+        "react-native-url-polyfill": "^2.0.0",
         "react-native-vision-camera": "^4.0.3",
         "valtio": "^1.13.2"
     },
