--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,7 +14,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'dailybux' do
+target 'aigo' do
   config = use_native_modules!
 
   use_frameworks! :linkage => :static
@@ -25,7 +25,7 @@ target 'dailybux' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'dailybuxTests' do
+  target 'aigoTests' do
     inherit! :complete
     # Pods for testing
   end
