--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.3.29",
     "graphql": "^16.8.1",
     "graphql-request": "^7.0.1",
+    "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-config": "^1.5.1",
