--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -100,11 +100,11 @@ android {
             keyPassword 'android'
         }
         release {
-            if (project.env.get("ANDROID_STORE_FILE")) {
-                storeFile file(project.env.get("ANDROID_STORE_FILE"))
-                storePassword project.env.get("ANDROID_STORE_PASSWORD")
-                keyAlias project.env.get("ANDROID_KEY_ALIAS")
-                keyPassword project.env.get("ANDROID_KEY_PASSWORD")
+            if (project.hasProperty("STORE_FILE")) {
+                storeFile file(STORE_FILE)
+                storePassword STORE_PASSWORD
+                keyAlias KEY_ALIAS
+                keyPassword KEY_PASSWORD
             }
         }
     }
