--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.2.0",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-uuid": "^2.0.2",
     "valtio": "^1.13.2"
   },
   "devDependencies": {
