--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.2.0",
+    "react-native-tracking-transparency": "^0.1.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.2",
     "valtio": "^1.13.2"
