--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "empty-modal": "^0.0.5",
     "graphql": "^16.8.1",
     "graphql-request": "^7.0.1",
     "lottie-react-native": "^6.7.2",
