--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
+    "react-native-share": "^10.2.1",
     "react-native-svg": "^15.2.0",
     "react-native-tracking-transparency": "^0.1.2",
     "react-native-url-polyfill": "^2.0.0",
