feat: use translation content

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "compilerOptions": {
         "baseUrl": ".",
         "moduleResolution": "Bundler",
+        "resolveJsonModule": true,
+        "esModuleInterop": true,
         "paths": {
             "assets/*": [
                 "./assets/*"
