--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,9 @@
             "screens/*": [
                 "./src/screens/*"
             ],
+            "modals/*": [
+                "./src/modals/*"
+            ],
             "api/*": [
                 "./src/api/*"
             ]
