--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/app-check": "19.2.2",
+    "@react-native-firebase/app-distribution": "19.2.2",
     "@react-native-firebase/auth": "^19.2.2",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/native": "^6.1.17",
