--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "aigo",
   "version": "0.0.2",
   "private": true,
+  "workspaces": [
+    ".",
+    "packages/*"
+  ],
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
