--- a/apps/mobile/ios/aigo.xcodeproj/xcshareddata/xcschemes/development.xcscheme
+++ b/apps/mobile/ios/aigo.xcodeproj/xcshareddata/xcschemes/development.xcscheme
@@ -11,7 +11,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "cp &quot;${PROJECT_DIR}/../../../.env.development&quot; &quot;${PROJECT_DIR}/../../../.env&quot;&#10;cp &quot;${PROJECT_DIR}/GoogleService-Info-development.plist&quot; &quot;${PROJECT_DIR}/GoogleService-Info.plist&quot;&#10;">
+               scriptText = "cp &quot;${PROJECT_DIR}/../../../.env.development&quot; &quot;${PROJECT_DIR}/../.env&quot;&#10;cp &quot;${PROJECT_DIR}/GoogleService-Info-development.plist&quot; &quot;${PROJECT_DIR}/GoogleService-Info.plist&quot;&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
