--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@metacraft/eslint-config": "^0.1.3",
     "@metacraft/tsconfig": "^0.0.2",
     "eslint": "^8.19.0",
+    "graphql": "^16.8.1",
+    "graphql-request": "^7.0.1",
     "jest": "^29.6.3",
     "typescript": "5.4.5"
   },
