--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "graphql": "^16.8.1",
     "graphql-request": "^7.0.1",
     "jest": "^29.6.3",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "webpack": "^5.92.0"
   },
   "engines": {
     "node": ">=18"
