chore: resolve module conficting

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,8 +13,8 @@
     "next": "14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.2",
-    "react-native-reanimated": "^3.12.0",
+    "react-native": "0.74.1",
+    "react-native-reanimated": "3.11.0",
     "react-native-svg": "^15.3.0",
     "react-native-web": "^0.19.12"
   },
