--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
+    "firebase": "^10.12.2",
     "next": "14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,6 +23,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.6",
     "@types/react-native": "^0.73.0",
+    "dotenv": "^16.4.5",
     "typescript": "5.4.5"
   }
 }
