--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -65,6 +65,7 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "path-scurry": "^1.11.1",
     "react-test-renderer": "18.2.0",
     "typescript": "5.4.5"
   },
