--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -26,7 +26,7 @@
     "@react-navigation/stack": "^6.3.29",
     "empty-modal": "^0.0.5",
     "graphql": "^16.8.1",
-    "graphql-request": "^7.0.1",
+    "graphql-request": "6.1.0",
     "libphonenumber-js": "^1.11.2",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
@@ -51,9 +51,6 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@graphql-codegen/cli": "5.0.2",
-    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
-    "@graphql-codegen/typescript-resolvers": "^4.0.6",
     "@metacraft/eslint-config": "^0.1.3",
     "@metacraft/tsconfig": "^0.0.2",
     "@react-native/babel-preset": "0.74.83",
