--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
+	"dev:sst": "sst bind next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix"
+    "lint": "next lint --fix",
+	"deploy:staging": "sst deploy --stage staging"
   },
   "dependencies": {
     "firebase": "^10.12.2",
@@ -23,7 +25,10 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.6",
     "@types/react-native": "^0.73.0",
+    "aws-cdk-lib": "2.142.1",
+    "constructs": "10.3.0",
     "dotenv": "^16.4.5",
+    "sst": "^2.43.2",
     "typescript": "5.4.5"
   }
 }
