--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,21 +5,24 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-	"dev:sst": "sst bind next dev",
+    "dev:sst": "sst bind next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint --fix",
-	"deploy:development": "sst deploy --stage development"
+    "deploy:development": "sst deploy --stage development"
   },
   "dependencies": {
+    "empty-modal": "^0.0.7",
     "firebase": "^10.12.2",
     "next": "14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "3.11.0",
     "react-native-svg": "^15.3.0",
-    "react-native-web": "^0.19.12"
+    "react-native-web": "^0.19.12",
+    "valtio": "^1.13.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
