--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "codegen": "graphql-codegen --config tools/codegen.ts",
-    "test": "jest"
+    "test": "jest",
+    "deploy:prod": "sst deploy --stage production",
+    "deploy:staging": "sst deploy --stage staging",
+    "deploy:dev": "sst deploy --stage development"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -25,6 +28,7 @@
     "graphql": "^16.8.1",
     "graphql-request": "6.1.0",
     "jest": "^29.6.3",
+    "sst": "^2.43.2",
     "typescript": "5.4.5",
     "webpack": "^5.92.0"
   },
