--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@graphql-codegen/typescript-resolvers": "^4.0.6",
     "@metacraft/eslint-config": "^0.1.3",
     "@metacraft/tsconfig": "^0.0.2",
+    "@types/mustache": "^4",
     "eslint": "^8.19.0",
     "graphql": "^16.8.1",
     "graphql-request": "6.1.0",
@@ -35,5 +36,8 @@
   "engines": {
     "node": ">=18"
   },
-  "packageManager": "yarn@4.2.2"
+  "packageManager": "yarn@4.2.2",
+  "dependencies": {
+    "mustache": "^4.2.0"
+  }
 }
