--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "rm -rf .next && next dev",
     "dev:sst": "sst bind next dev",
     "build": "next build",
     "start": "next start",
@@ -18,10 +18,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-qrcode-svg": "^6.3.1",
     "react-native-reanimated": "3.11.0",
     "react-native-svg": "^15.3.0",
     "react-native-web": "^0.19.12",
+    "react-native-web-linear-gradient": "^1.1.2",
     "valtio": "^1.13.2"
   },
   "devDependencies": {
