--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "deploy:development": "sst deploy --stage development"
   },
   "dependencies": {
+    "date-fns": "^3.6.0",
     "empty-modal": "^0.0.7",
     "firebase": "^10.12.2",
     "next": "14.2.4",
