feat: config universal links to open iOS app from web link

--- a/apps/mobile/ios/aigo/aigoRelease.entitlements
+++ b/apps/mobile/ios/aigo/aigoRelease.entitlements
@@ -8,5 +8,12 @@
 	<array>
 		<string>Default</string>
 	</array>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:ride.aigo.network</string>
+		<string>applinks:*.ride.aigo.network</string>
+		<string>webcredentials:ride.aigo.network</string>
+		<string>webcredentials:*.ride.aigo.network</string>
+	</array>
 </dict>
 </plist>
