--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.6",
+    "sst": "^2.43.2",
     "typescript": "5.4.5"
   }
 }
