--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "14.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.6",
