--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint --fix"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "next": "14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "@types/lodash": "^4",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.6",
     "sst": "^2.43.2",
