--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -19,8 +19,12 @@
     "@invertase/react-native-apple-authentication": "^2.3.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-clipboard/clipboard": "^1.14.1",
-    "@react-native-firebase/app": "^19.2.2",
-    "@react-native-firebase/auth": "^19.2.2",
+    "@react-native-firebase/analytics": "^20.1.0",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/auth": "^20.1.0",
+    "@react-native-firebase/crashlytics": "^20.1.0",
+    "@react-native-firebase/messaging": "^20.1.0",
+    "@react-native-firebase/remote-config": "^20.1.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -37,6 +41,7 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-localize": "^3.1.0",
+    "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "3.11.0",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
