--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -50,7 +50,8 @@
     "react-native-tracking-transparency": "^0.1.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.2",
-    "valtio": "^1.13.2"
+    "valtio": "^1.13.2",
+    "wildcard-match": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
