feat: bump mobile version, turn-off nnCampaign by default

--- a/apps/mobile/ios/Podfile
+++ b/apps/mobile/ios/Podfile
@@ -16,9 +16,9 @@ prepare_react_native_project!
 
 setup_permissions([
   'AppTrackingTransparency',
-  'LocationAccuracy',
-  'LocationAlways',
-  'LocationWhenInUse',
+  # 'LocationAccuracy',
+  # 'LocationAlways',
+  # 'LocationWhenInUse',
   'Notifications',
 ])
 
