chore: apply type-check/lint commands for all packages with turborepo

--- a/apps/landing/package.json
+++ b/apps/landing/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "landing",
+  "name": "@aigo/landing",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "lodash": "^4.17.21",
