--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "packages/*"
   ],
   "scripts": {
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
+    "lint": "turbo run lint",
+    "lint:fix": "turbo run lint:fix",
+    "type-check": "turbo run type-check",
     "codegen": "graphql-codegen --config tools/codegen.ts",
     "test": "jest",
     "deploy:prod": "sst deploy --stage production",
@@ -31,6 +32,7 @@
     "graphql-request": "6.1.0",
     "jest": "^29.6.3",
     "sst": "^2.43.2",
+    "turbo": "^2.0.7",
     "typescript": "5.4.5",
     "webpack": "^5.92.0"
   },
