--- a/apps/ride/package.json
+++ b/apps/ride/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "ride",
+  "name": "@aigo/ride",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "next": "14.2.4",
