--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "type-check": "tsc --noEmit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "graphql": "^16.8.1",
     "graphql-request": "6.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.19.0",
+    "typescript": "5.4.5"
   }
 }
