--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "type-check": "tsc --noEmit"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +18,8 @@
     "react-native-reanimated": "^3.11.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.6"
+    "@types/react": "^18.2.6",
+    "eslint": "^8.19.0",
+    "typescript": "5.4.5"
   }
 }
