--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.3.0",
+    "@mapbox/mapbox-sdk": "^0.16.0",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-community/geolocation": "^3.2.1",
@@ -66,6 +67,7 @@
     "@react-native/babel-preset": "0.74.83",
     "@react-native/metro-config": "0.74.83",
     "@react-native/typescript-config": "0.74.83",
+    "@types/mapbox__mapbox-sdk": "^0",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
