--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -76,6 +76,7 @@
     "jest": "^29.6.3",
     "path-scurry": "^1.11.1",
     "react-test-renderer": "18.2.0",
+    "reactotron-react-native": "^5.1.7",
     "typescript": "5.4.5"
   },
   "engines": {
