--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -39,6 +39,7 @@
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-background-actions": "^4.0.1",
     "react-native-config": "^1.5.1",
     "react-native-device-info": "^10.13.2",
     "react-native-fs": "^2.20.0",
