--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -32,6 +32,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@rnmapbox/maps": "^10.1.28",
+    "@turf/turf": "^7.0.0",
     "empty-modal": "^0.0.7",
     "graphql": "^16.8.1",
     "graphql-request": "6.1.0",
