--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -38,6 +38,7 @@
     "graphql-request": "6.1.0",
     "libphonenumber-js": "^1.11.2",
     "lottie-react-native": "^6.7.2",
+    "p-throttle": "^6.1.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-background-actions": "^4.0.1",
