--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -29,6 +29,7 @@
     "@react-native-firebase/messaging": "^20.1.0",
     "@react-native-firebase/remote-config": "^20.1.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@rnmapbox/maps": "^10.1.28",
