feat: include commitHash as part of App version

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -1,4 +1,7 @@
 {
   "name": "aigo",
-  "displayName": "AiGO Ride"
+  "displayName": "AiGO Ride",
+  "version": "1.0.10",
+  "buildNumber": 38,
+  "buildHash": "3a87601"
 }
