feat: derive keypair/wallet implementation

--- a/packages/crypto/tsconfig.json
+++ b/packages/crypto/tsconfig.json
@@ -3,6 +3,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "moduleResolution": "Bundler",
+    "strict": true,
+    "noImplicitAny": true,
+    "strictFunctionTypes": true,
     "resolveJsonModule": true,
     "esModuleInterop": true
   }
