--- a/packages/crypto/package.json
+++ b/packages/crypto/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@aigo/api": "*",
     "@aigo/config": "*",
+    "@bitcoinerlab/secp256k1": "^1.1.1",
     "@tanle/shamirs-secret-sharing": "^0.0.2",
+    "bip32": "^5.0.0-rc.0",
     "bip39": "^3.1.0",
-    "bs58": "^6.0.0"
+    "bs58": "^6.0.0",
+    "elliptic": "^6.5.7",
+    "ethers": "^6.13.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,6 +25,7 @@
     "@babel/preset-typescript": "^7.24.7",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
+    "@types/elliptic": "^6",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0"
   },
