feat: create wallet with passcode

--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -38,7 +38,9 @@
     "@react-navigation/stack": "^6.3.29",
     "@rnmapbox/maps": "^10.1.28",
     "@turf/turf": "^7.0.0",
+    "bip39": "^3.1.0",
     "empty-modal": "^0.0.10",
+    "ethers": "^6.13.2",
     "graphql": "^16.8.1",
     "graphql-request": "6.1.0",
     "libphonenumber-js": "^1.11.2",
